--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav>
-        <h2 class="logo">Ada Lovelace</h2>
+        <h2 class="logo">Ada Lovelace#2</h2>
         <ul class="navigation-items">
             <li class="navigation-item">
                 <a href="#about-me">About me</a>
